# MonorepoViewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: design.md  tech-stack.md
src/: App.tsx  DiffViewer.tsx  diffParser.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
